--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,6 @@
   box-sizing: border-box;
 }
 
-.mar-pad-reset {
-  margin: 0;
-  padding: 0;
-}
-
 .dp-flex {
   display: flex;
 }
@@ -28,6 +23,11 @@
 .dp-flex-wrap {
   display: flex;
   flex-wrap: wrap;
+}
+
+.spacebet-flexstart{
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
 .wd-100 {
@@ -70,12 +70,10 @@
   padding-left: 12.5%;
   padding-right: 12.5%;
   text-decoration: none;
-  width: 100%;
   margin-top: 8%;
 }
 
 .backButtonContainer {
-  display: flex;
   width: 100px;
   height: 50px;
 }
@@ -97,17 +95,11 @@
 }
 
 .searchContainer {
-  display: flex;
-  flex-direction: column;
   width: 48.5%;
   position: relative;
 }
 
 .searchBar {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
   width: 100%;
   height: 85px;
 }
@@ -125,15 +117,13 @@
   background-color: transparent;
   padding: 0 20px;
   color: #fff;
-  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   font-weight: 400;
 }
 
 .searchResult {
   position: absolute;
-  margin-top: 15.5%;
-  width: 100%;
+  margin-top: 15%;
   background-color: #434343;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   overflow: hidden;
@@ -144,10 +134,9 @@
   display: none;
 }
 
-.searchResult .searchItem {
+.searchItem {
   width: 100%;
   height: 45px;
-  display: flex;
   align-items: center;
   color: #FFF;
 }
@@ -162,8 +151,6 @@
 }
 
 .langBar {
-  display: flex;
-  flex-direction: row;
   justify-content: space-around;
   align-items: center;
   width: 200px;
@@ -202,9 +189,6 @@
 }
 
 .detail {
-  width: 100%;
-  justify-content: space-between;
-  align-items: flex-start;
   padding-left: 12.5%;
   padding-right: 12.5%;
   text-decoration: none;
@@ -212,17 +196,9 @@
   margin-bottom: 12%;
 }
 
-.detailImg {
-  
-}
-
 .detailCharacter {
   width: 75%;
   height: fit-content;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
   padding-left: 5%;
 }
 
@@ -239,8 +215,6 @@
 }
 
 .characterComics {
-  display: flex;
-  flex-direction: column;
   justify-content: center;
   width: 100%;
   height: fit-content;
@@ -292,6 +266,13 @@
   margin-right: 1.5%;
   margin-bottom: 8%;
   padding: 0 1.5%;
+  color: #fff;
+}
+
+.ch-container:hover {
+  border: 1px solid #fff;
+  background-color: #EDEDED;
+  color: #000;
 }
 
 .character{
@@ -307,7 +288,6 @@
   word-break: keep-all;
   font-weight: 400;
   text-align: center;
-  color: #fff;
   margin-top: 10%;
   margin-bottom: 14%;
 }
@@ -319,7 +299,7 @@
 }
 
 .transition {
-  width: 38%;
+  width: 45%;
   padding: 0px;
   margin-top: 0px;
   padding-right: 10%;
@@ -365,6 +345,15 @@
 /* styles for desktop view */
 @media (min-width: 1024px) and (max-width: 1350px){
 
+  .searchResult {
+    position: absolute;
+    margin-top: 18.7%;
+    background-color: #434343;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    overflow: hidden;
+    overflow-y: auto;
+  }
+
   .ch-container {
     width: 18%;
     align-items: center;
@@ -375,10 +364,10 @@
   }
 
   .transition {
-    width: 40%;
+    width: 50%;
     padding: 0px;
     margin-top: 0px;
-    padding-right: 8%;
+    padding-right: 15%;
     justify-content: space-around;
     align-items: center;
   }
@@ -390,6 +379,15 @@
 
   .detailImg {
     width: 40%;
+  }
+
+  .searchResult {
+    position: absolute;
+    margin-top: 25%;
+    background-color: #434343;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    overflow: hidden;
+    overflow-y: auto;
   }
 
   .ch-container {
@@ -416,16 +414,17 @@
   }
 
   .transition {
-      width: 30%;
+      width: 45%;
       padding: 0px;
       margin-top: 0px;
-      padding-right: 15%;
+      padding-right: 23%;
       align-items: center;
   }
   
   .foot-tran-span {
       font-weight: 500;
-      margin-right: 12%;
+      margin-left: 8%;
+      margin-right: 6%;
   }
   
   .active-page {
@@ -435,8 +434,8 @@
       background-color: #7e7e7e;
       text-align: center;
       border-radius: 25px;
-      margin-left: 0px;
-      margin-right: 12%;
+      margin-left: 6%;
+      margin-right: 6%;
   }
 }
 
@@ -445,6 +444,15 @@
 
   .detailImg {
     width: 40%;
+  }
+
+  .searchResult {
+    position: absolute;
+    margin-top: 33%;
+    background-color: #434343;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    overflow: hidden;
+    overflow-y: auto;
   }
 
   .content {
@@ -486,7 +494,8 @@
   
   .foot-tran-span {
       font-weight: 500;
-      margin-right: 10%;
+      margin-left: 6%;
+      margin-right: 6%;
   }
   
   .active-page {
